The footer is disgusting but I can deal with it later, no longer visible for now

--- a/static/style.css
+++ b/static/style.css
@@ -123,7 +123,6 @@ body {
 .footer {
 clear:both;
 padding:5px 10px;
-background:#cc9;
 }
 .footer p {
 margin:0;
